--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -80,7 +80,28 @@
                 "--model", "cycle_gan_style",
                 "--netG", "transtyle",
                 "--dataroot", "datasets/horse2zebra",
-                "--name", "horse2zebra_cut_style",
+                "--name", "horse2zebra_cyclegan_style",
+                "--batch_size", "1",
+                "--num_threads", "0",
+                "--display_freq", "20",
+                "--print_freq", "20",
+                "--disable_logger",
+            ],
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "name": "cyclegan_pre",
+            "type": "python",
+            "request": "launch",
+            "program": "train.py",
+            "args": [
+                "--model", "cycle_gan_pre",
+                "--netG", "resnet_pre",
+                "--pretrained_model", " ",
+                "--dataroot", "datasets/horse2zebra",
+                "--name", "horse2zebra_cyclegan_pre",
                 "--batch_size", "1",
                 "--num_threads", "0",
                 "--display_freq", "20",
