--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Attach",
+            "type": "python",
+            "request": "attach",
+            "processId": "${command:pickProcess}",
+            "justMyCode": true
+        },
+        {
             "name": "CurrentFile",
             "type": "python",
             "request": "launch",
@@ -26,6 +33,26 @@
                 "--num_threads", "0",
                 "--display_freq", "20",
                 "--print_freq", "20",
+                "--disable_logger",
+            ],
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "name": "U-GAT-IT",
+            "type": "python",
+            "request": "launch",
+            "program": "train.py",
+            "args": [
+                "--model", "ugatit",
+                "--dataroot", "datasets/selfie2anime",
+                "--name", "selfie2anime",
+                "--batch_size", "1",
+                "--num_threads", "0",
+                "--display_freq", "20",
+                "--print_freq", "20",
+                "--light",
                 "--disable_logger",
             ],
             "console": "integratedTerminal",
@@ -60,6 +87,8 @@
                 "--model", "cut_style",
                 "--netG", "transtyle",
                 "--dataroot", "datasets/horse2zebra",
+                "--style_extractor", "simclr",
+                "--resnet18_style_model", "checkpoints\\pretrained\\horsezebra.pth",
                 "--name", "horse2zebra_cut_style",
                 "--batch_size", "1",
                 "--num_threads", "0",
