--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -40,6 +40,25 @@
             "cwd": "${workspaceFolder}"
         },
         {
+            "name": "UNIT",
+            "type": "python",
+            "request": "launch",
+            "program": "train.py",
+            "args": [
+                "--model", "unit",
+                "--dataroot", "datasets/selfie2anime",
+                "--name", "unit_selfie2anime",
+                "--batch_size", "1",
+                "--num_threads", "0",
+                "--display_freq", "20",
+                "--print_freq", "20",
+                "--disable_logger",
+            ],
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "cwd": "${workspaceFolder}"
+        },
+        {
             "name": "MUNIT",
             "type": "python",
             "request": "launch",
