--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,23 @@
-torch>=1.4.0
-torchvision>=0.5.0
-dominate>=2.4.0
-visdom>=0.1.8.8
-opencv-python-headless
-packaging
+aiohttp>=3.8.1
+albumentations>=1.1.0
+beautifulsoup4>=4.11.1
+dominate>=2.6.0
+einops>=0.4.1
 GPUtil>=1.4.0
+imageio>=2.9.0
+matplotlib>=3.4.2
+numpy>=1.19.5
+opencv_python_headless>=4.5.2.52
+packaging>=20.9
+Pillow>=9.1.0
+pytz>=2021.3
+PyYAML>=5.4.1
+pyzmq>=22.3.0
+regex>=2021.4.4
+requests>=2.25.1
+scipy>=1.6.2
+setuptools>=49.2.1
+torch>=1.8.1
+torchvision>=0.9.1
+tqdm>=4.60.0
+visdom>=0.1.8.9
